# ai-curses

./: .gitignore  LICENSE  README.md  chat-form.py  main-chat.py  main.py  pyproject.toml
ai_curses/: api_wrap.py  command_prompt.py  config.py  handle_messages.py  meta_commands.py  new_prompt.py  openai.py  prompt.py
tests/: test_api_wrap.py  test_handle_messages.py
