[tool.poetry]
name = "ai-curses"
version = "0.1.0"
description = "A Python client based in curses for various AI platforms."
authors = ["JP Etcheber <jetcheber@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "ai_curses"}]

[tool.poetry.dependencies]
python = "^3.11"
dashport = "^0.7.3"
requests = "^2.28.2"
configparser = "^5.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake8 = "^6.0.0"
mock = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
